syntax = "proto3";

option csharp_namespace = "Common.Grpc";
//import "google/protobuf/api.proto";

service GrpcAvailablePluginsService{
  rpc GetAvailablePlugins(GrpcGetAvailablePluginsRequest) returns (GrpcGetAvailablePluginsResponse);
  rpc GetAvailablePluginWithIdentifier(GrpcGetAvailablePluginWithIdentifierRequest) returns (GrpcAvailablePluginInfoResponse);
  rpc GrpcCanRunNewPlugin(GrpcCanRunNewPluginRequest) returns (GrpcCanRunNewPluginResponse);
  rpc GrpcIsPluginInQueue(GrpcIsPluginInQueueRequest) returns (GrpcIsPluginInQueueResponse);
}

message GrpcGetAvailablePluginsRequest{

}

message GrpcGetAvailablePluginWithIdentifierRequest{
  string identifier = 1;
}

message GrpcCanRunNewPluginRequest{

}

message GrpcIsPluginInQueueRequest{
  int32 pluginId = 1;
}

message GrpcGetAvailablePluginsResponse{
  repeated GrpcAvailablePluginInfoResponse plugins = 1;
}

message GrpcAvailablePluginInfoResponse{
  string name = 1;
  string identifier = 2;
  string version = 3;
}

message GrpcCanRunNewPluginResponse{
  bool canRun = 1;
}

message GrpcIsPluginInQueueResponse{
  bool inQueue = 1;
}

